fix overflow

--- a/src/features/constraintMenu/constraintMenu.css
+++ b/src/features/constraintMenu/constraintMenu.css
@@ -71,6 +71,8 @@ div.constraint-menu {
     grid-row-start: 1;
     grid-row-end: 2;
     grid-column-start: 2;
+    overflow: scroll;
+    max-height: 210px;
 }
 
 .constrain-label input {
